[gd_scene load_steps=8 format=3 uid="uid://dkhs1oweifu3y"]

[ext_resource type="Script" path="res://Scripts/player.gd" id="1_6bp4r"]
[ext_resource type="Texture2D" uid="uid://c0xg5st4jh5tu" path="res://Assets/Cap1.png" id="2_o80hy"]
[ext_resource type="Script" path="res://Scripts/label.gd" id="3_777ti"]
[ext_resource type="PackedScene" uid="uid://m84cyg770d3x" path="res://Scenes/Hook.tscn" id="4_12b52"]
[ext_resource type="PackedScene" uid="uid://dlfqyxb3eld16" path="res://Assets/Audio/drowning_audio_stream_player.tscn" id="5_1dg16"]

[sub_resource type="CircleShape2D" id="CircleShape2D_nyveq"]
radius = 22.0

[sub_resource type="CircleShape2D" id="CircleShape2D_nbwfu"]
radius = 13.0384

[node name="Player" type="CharacterBody2D"]
z_index = 5
z_as_relative = false
script = ExtResource("1_6bp4r")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.092, 0.092)
texture = ExtResource("2_o80hy")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_nyveq")

[node name="RepairCheckArea" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="Mask checker" type="CollisionShape2D" parent="RepairCheckArea"]
shape = SubResource("CircleShape2D_nbwfu")

[node name="PlayerBoundUi" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="PlayerBoundUi"]
visible = false
layout_mode = 2
offset_left = 17.0
offset_top = -44.0
offset_right = 147.0
offset_bottom = -21.0
text = "BUTTON_PROMT"
script = ExtResource("3_777ti")

[node name="Hook" parent="." instance=ExtResource("4_12b52")]
visible = false
distance = 400.0

[node name="Drowning_AudioStreamPlayer" parent="." instance=ExtResource("5_1dg16")]

[node name="TileConfirmTimer" type="Timer" parent="."]

[connection signal="area_entered" from="RepairCheckArea" to="." method="_on_damage_tile_entered"]
[connection signal="area_exited" from="RepairCheckArea" to="." method="_on_repair_check_area_area_exited"]
[connection signal="area_shape_exited" from="RepairCheckArea" to="." method="_on_repair_check_area_area_shape_exited"]
